# django-test-project

./: pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_auto_20211212_1700.py
blog/templates/blog/: base.html  post_detail.html  post_list.html  post_list_per_month.html
mysite/: settings.py  urls.py
snippets/: models.py  serializers.py  views.py
snippets/migrations/: 0001_initial.py
