[tool.poetry]
name = "djangotraining"
version = "0.1.0"
description = ""
authors = ["Francisco-Costa98 <franciscomffcosta@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.4"
djangorestframework = "^3.13.1"
Pygments = "^2.11.2"
httpie = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
